--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,8 +2,8 @@
     <!-- <meta charset=utf-8 /> -->
     <style>
       footer {
-        height: 100px;
-        background: red;
+        height: 25px;
+        /* background: red; */
       }
     </style>
 </head>
