--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
     <style>
       footer {
         height: 40px;
-        background: mintcream;
+        background: ghostwhite;
       }
     </style>
 </head>
