--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
       footer {
         height: 40px;
         background: ghostwhite;
-        font:'Arial';
+        font:'Courier New', 'Courier', 'monospace';
       }
     </style>
 </head>
