--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <head>
     <!-- <meta charset=utf-8 /> -->
     <style>
-      footer {
+      header {
         /* height: 40px; */
         /* background: ghostwhite; */
         font-family:'DM Mono', sans-serif ;
