--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
     <style>
       header {
         /* height: 40px; */
-        /* background: ghostwhite; */
+        background: #ffffff;
         font-family:'DM Mono', sans-serif ;
       }
     </style>
