--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
     <style>
       footer {
         height: 40px;
-        background: ghostwhite;
+        background: #ffffff;
         font-family:'DM Mono', sans-serif ;
       }
     </style>
