--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,8 @@
       header {
         /* height: 40px; */
         background: #ffffff;
-        font-family:'DM Mono', sans-serif ;
+        font-family:'DM Mono', sans-serif;
+        color: #fca311;
       }
     </style>
 </head>    
