--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
         /* height: 40px; */
         background: #ffffff;
         font-family:'DM Mono', sans-serif;
-        color: #fca311;
+        color: #ffffff;
       }
     </style>
 </head>    
