--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,6 +2,7 @@
     <!-- <meta charset=utf-8 /> -->
     <style>
       footer {
+        color: #ffffff;
         height: 40px;
         background: #ffffff;
         font-family:'DM Mono', sans-serif ;
