--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,6 @@
         /* height: 40px; */
         background: #ffffff;
         font-family:'DM Mono', sans-serif;
-        color: #ffffff;
       }
     </style>
 </head>    
@@ -15,7 +14,7 @@
         {%- assign default_paths = site.pages | map: "path" -%}
         {%- assign page_paths = site.header_pages | default: default_paths -%}
         {%- assign titles_size = site.pages | map: 'title' | join: '' | size -%}
-        <a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
+        <a style="color:blue" class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
     
         {%- if titles_size > 0 -%}
             <nav class="site-nav">
