--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,7 @@
         {%- assign default_paths = site.pages | map: "path" -%}
         {%- assign page_paths = site.header_pages | default: default_paths -%}
         {%- assign titles_size = site.pages | map: 'title' | join: '' | size -%}
-        <a style="color: #fca311" class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
+        <a style="color:black" class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
     
         {%- if titles_size > 0 -%}
             <nav class="site-nav">
