--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
 <title>Website with Current Time and Date</title>
 <style>
   body {
-    font-family: monospace;
+    font-family: helvetica;
     margin: 0;
   }
   header {
@@ -16,6 +16,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 10px;
+    margin-left: 100px;
   }
   .site-title {
     color: black;
