--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,13 +17,14 @@
     align-items: center;
     padding: 10px;
     margin-left: 100px;
+    margin-right: 100px;
   }
   .site-title {
     color: black;
     text-decoration: none;
   }
   .time-date {
-    font-size: 1.2rem; /* Reduced font size */
+    font-size: 1.0rem; /* Reduced font size */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -53,7 +54,6 @@
     }
   }
   .page-link {
-    color: black;
     text-decoration: none;
     margin-left: 15px;
   }
