--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,6 +18,8 @@
     padding: 0px;
     margin-left: 100px;
     margin-right: 100px;
+    border-top: 0px;
+    border-bottom: 0px;
   }
   .site-title {
     color: black;
