--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,6 +9,12 @@
     font-family: helvetica;
     margin: 0;
   }
+  .site-header {
+    border-top: 0px ;
+    border-bottom: 0px ;
+    min-height: 55.95px;
+    position: relative;
+    }
   header {
     background: #ffffff;
     font-family: 'DM Mono', sans-serif;
@@ -18,8 +24,6 @@
     padding: 0px;
     margin-left: 100px;
     margin-right: 100px;
-    border-top: 0px;
-    border-bottom: 0px;
   }
   .site-title {
     color: black;
