--- a/_includes/header.html
+++ b/_includes/header.html
@@ -70,7 +70,7 @@
   <a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
   <div class="time-date">
     <span id="time"></span>
-    <span> · </span>
+    <span>&nbsp;·&nbsp;</span>
     <span id="date"></span>
   </div>
   <nav class="site-nav">
