--- a/_includes/header.html
+++ b/_includes/header.html
@@ -31,6 +31,7 @@
   }
   .time-date {
     font-size: 1.0rem; /* Reduced font size */
+    color:darkgray;
     display: flex;
     align-items: center;
     justify-content: center;
