--- a/_includes/header.html
+++ b/_includes/header.html
@@ -32,6 +32,7 @@
   .time-date {
     font-size: 1.0rem; /* Reduced font size */
     color:darkgray;
+    font-family: 'Open Sans', sans-serif;
     display: flex;
     align-items: center;
     justify-content: center;
