--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,8 @@
 <title>Website with Current Time and Date</title>
 <style>
   body {
-    font-family: helvetica;
+    font-family: helvetica, arial, sans-serif;
+    -webkit-font-smoothing: antialiased;
     margin: 0;
   }
   .site-header {
