--- a/_includes/header.html
+++ b/_includes/header.html
@@ -74,7 +74,7 @@
   <a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
   <div class="time-date">
     <span id="time"></span>
-    <span>&nbsp;&nbsp;·&nbsp;&nbsp;</span>
+    <span>&nbsp;&nbsp;&nbsp;&nbsp;·&nbsp;&nbsp;&nbsp;&nbsp;</span>
     <span id="date"></span>
   </div>
   <nav class="site-nav">
