--- a/_includes/header.html
+++ b/_includes/header.html
@@ -74,9 +74,9 @@
   <a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
   <div class="time-date">
     <span id="time"></span>
-    <span>:</span>
+    <span class="colon">:</span>
     <span id="minutes"></span>
-    <span>:</span>
+    <span class="colon">:</span>
     <span id="seconds"></span>
     <span>&nbsp;&nbsp;&nbsp;&nbsp;·&nbsp;&nbsp;&nbsp;&nbsp;</span>
     <span id="date"></span>
