--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,10 +11,11 @@
     margin: 0;
   }
   .site-header {
-    border-top: 0px ;
+    border-top: 0px;
     border-bottom: 0px ;
     min-height: 55.95px;
     position: relative;
+    margin-top: 25px;
   }
   header {
     background: #ffffff;
@@ -40,7 +41,7 @@
     flex-grow: 1;
   }
   .colon {
-    animation: blink 1s infinite;
+    animation: blink 3s infinite;
     color: #ff9933;
   }
   @keyframes blink {
