--- a/_includes/header.html
+++ b/_includes/header.html
@@ -68,6 +68,9 @@
     text-decoration: none;
     margin-left: 15px;
   }
+  .time-dot{
+    color:black
+  }
 </style>
 </head>
 <body>
@@ -79,7 +82,7 @@
     <span id="minutes"></span>
     <span class="colon">:</span>
     <span id="seconds"></span>
-    <span>&nbsp;&nbsp;&nbsp;&nbsp;·&nbsp;&nbsp;&nbsp;&nbsp;</span>
+    <span class="time-dot">&nbsp;&nbsp;&nbsp;&nbsp;·&nbsp;&nbsp;&nbsp;&nbsp;</span>
     <span id="date"></span>
   </div>
   <nav class="site-nav">
