--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,7 +33,7 @@
   }
   .time-date {
     font-size: 0.9rem; /* Reduced font size */
-    color: black;
+    color: blue;
     font-family: 'Open Sans', sans-serif;
     display: flex;
     align-items: center;
@@ -69,7 +69,7 @@
     margin-left: 15px;
   }
   .time-dot{
-    color:blue
+    color:black
   }
 </style>
 </head>
