--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,7 +33,7 @@
   }
   .time-date {
     font-size: 0.9rem; /* Reduced font size */
-    color: blue;
+    color: black;
     font-family: 'Open Sans', sans-serif;
     display: flex;
     align-items: center;
